--- a/tablet.css
+++ b/tablet.css
@@ -4,32 +4,34 @@
  justify-content: center;
 }
 
-
 /* ABOUT */
 .headings{
     font-size: 3.5rem;
 }
 
-
-
-
 #pic{
     flex-direction: column;
-align-items: center}
+    align-items: center
+}
+
 #pic img{
     width: 500px;
     
 }
+
 #intro h2{
     text-align: center;
     padding: 10px;
 }
+
 .input{
     width: 60%;
 }
+
 #msg{
     width: 55%;
 }
+
 #send{
     width: 20%;
 }
